src/tests/noArrayIndexKey/invalid/case#8/index.jsx
import React from 'react';

const MeuComponente = (props) => {
    return (
        <div>
            {foo.every((bar, i) => { baz.push(<Foo key={i} />); })}
        </div>
    );
};

export default MeuComponente;

